# ocaml-compose-dsl

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  dune-project  dune-workspace  ocaml-compose-dsl-lib.opam  ocaml-compose-dsl.opam
.github/workflows/: ci.yml  release.yml
constraints/: 001-operator-precedence.md  002-keyword-disambiguation.md  003-question-alt-pairing.md  004-epistemic-pairing.md  005-reducer-beta-reduction.md  006-literate-fence-extraction.md
docs/superpowers/plans/: 000-dsl.md  001-github-actions-release.md  002-fanout-and-arrow-semantics.md  003-cli-help-version.md  004-numeric-literal.md  005-unicode-ident-and-unit.md  006-unicode-col-position.md  007-question-operator.md  008-ast-loc.md  009-remove-loop-eval-check.md  010-type-annotation.md  011-question-alt-operand-warning.md  012-lambda-and-let-binding.md  013-literate-mode.md  014-string-literal-expr.md  015-unify-node-app.md  016-let-in-syntax.md  017-menhir-sedlex-migration.md  018-unit-value.md  019-semicolon-statement-separator.md  020-epistemic-lint.md
docs/superpowers/specs/: 2026-03-19-cli-help-version-design.md  (+18 more)
examples/: brainstorming.arr  checker.arr  release.arr  tdd-loop.arr
lib/: ast.ml  checker.ml  compose_dsl.ml  dune  lexer.ml  markdown.ml  parse_errors.ml  parser.messages  parser.ml  parser.mly  printer.ml  reducer.ml
scripts/: release-macos-x86_64.sh
test/: dune  helpers.ml  main.ml  test_checker.ml  test_compose_dsl.ml  test_integration.ml  test_lexer.ml  test_markdown.ml  test_parser.ml  test_printer.ml  test_properties.ml  test_reducer.ml
